--- a/index.html
+++ b/index.html
@@ -18,9 +18,9 @@
           <ul class="nav-bar">
               <li><a href="#About">About Me</a></li>
               <li><a href="#Work">Work</a></li>
-              <li><a href="#">Contact</a></li>
-              <li><a href="#">Github</a></li>
-              <li><a href="#">Instagram</a></li>
+              <li><a href="#Contact">Contact</a></li>
+              <li><a href="https://github.com/evanarbour">Github</a></li>
+              <li><a href="https://www.instagram.com/evanarbour/?hl=en">Instagram</a></li>
           </ul>
       </nav>
         <header class="landinginfo"> 
@@ -68,15 +68,19 @@
                 <div class="work-grid">
                     <div class="gallery-item gallery-item-1 ">
                         <img src="./images/image-1.jpeg" class="gallery-img" alt="Image1">
+                        <div class="overlay">Here is project 1</div>
                     </div>
                     <div class="gallery-item gallery-item-2">
                         <img src="./images/image-2.jpeg" class="gallery-img" alt="Image2">
+                        <div class="overlay">Here is project 2</div>
                     </div>
                     <div class="gallery-item gallery-item-3">
                         <img src="./images/image-3.jpeg" class="gallery-img" alt="Image3">
+                        <div class="overlay">Here is project 3</div>
                     </div>
                     <div class="gallery-item gallery-item-4">
                         <img src="./images/image-4.jpeg" class="gallery-img" alt="Image4">
+                        <div class="overlay">Here is project 4</div>
                     </div>
                 </div>
             </section>
@@ -87,10 +91,10 @@
             <h1><span>3</span> contact</h1>
             </div>
              <ul class="footer-nav">
-                <li>Phone: 207-446-4505</li>
                 <li><a href="mailto:evan.arbour@gmail.com">Email</a></li>
-                <li><a href="##">Github</a></li>
-                <li><a href="##">Instagram</a></li>
+                <li><a href="https://github.com/evanarbour">Github</a></li>
+                <li><a href="https://www.instagram.com/evanarbour/?hl=en">Instagram</a></li>
+                <li>Phone: 207-446-4505</li>
             </ul>
         </footer>
 
