changed :hover of link elements & added media query

--- a/index.html
+++ b/index.html
@@ -2,7 +2,6 @@
 <html lang="en">
   <head>
       <meta charset="UTF-8">
-      <!-- <meta http-equiv="X-UA-Compatible" content="IE=edge"> -->
       <meta name="viewport" content="width=device-width, initial-scale=1">
       <title>Evan Arbour</title>
       <link rel="stylesheet" href="style.css">
@@ -67,19 +66,19 @@
                 color change etc -->
                 <div class="work-grid">
                     <div class="gallery-item gallery-item-1 ">
-                        <img src="./images/image-1.jpeg" class="gallery-img" alt="Image1">
+                        <a href="##"><img src="./images/image-1.jpeg" class="gallery-img" alt="Image1"></a>
                         <div class="overlay">Here is project 1</div>
                     </div>
                     <div class="gallery-item gallery-item-2">
-                        <img src="./images/image-2.jpeg" class="gallery-img" alt="Image2">
+                        <a href="##"><img src="./images/image-2.jpeg" class="gallery-img" alt="Image2"></a>
                         <div class="overlay">Here is project 2</div>
                     </div>
                     <div class="gallery-item gallery-item-3">
-                        <img src="./images/image-3.jpeg" class="gallery-img" alt="Image3">
+                        <a href="##"><img src="./images/image-3.jpeg" class="gallery-img" alt="Image3"></a>
                         <div class="overlay">Here is project 3</div>
                     </div>
                     <div class="gallery-item gallery-item-4">
-                        <img src="./images/image-4.jpeg" class="gallery-img" alt="Image4">
+                        <a href="##"><img src="./images/image-4.jpeg" class="gallery-img" alt="Image4"></a>
                         <div class="overlay">Here is project 4</div>
                     </div>
                 </div>
@@ -94,11 +93,7 @@
                 <li><a href="mailto:evan.arbour@gmail.com">Email</a></li>
                 <li><a href="https://github.com/evanarbour">Github</a></li>
                 <li><a href="https://www.instagram.com/evanarbour/?hl=en">Instagram</a></li>
-                <li>Phone: 207-446-4505</li>
             </ul>
         </footer>
-
-
-        
     </body>
 </html>
