--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
       </nav>
         <header class="landinginfo"> 
             <div>
-                <img class="EvanPic" src="./images/img_4223.png" alt="#">
+                <img class="EvanPic" src="./images/img_4223.png" alt="Picture of Evan">
             </div>
             <div class="title-container">
                 <h1>EVAN ARBOUR</h1>
@@ -66,19 +66,19 @@
                 color change etc -->
                 <div class="work-grid">
                     <div class="gallery-item gallery-item-1 ">
-                        <a href="##"><img src="./images/image-1.jpeg" class="gallery-img" alt="Image1"></a>
+                        <a href="##"><img src="./images/image-1.jpeg" class="gallery-img" alt="A steel wall"></a>
                         <div class="overlay">Here is project 1</div>
                     </div>
                     <div class="gallery-item gallery-item-2">
-                        <a href="##"><img src="./images/image-2.jpeg" class="gallery-img" alt="Image2"></a>
+                        <a href="##"><img src="./images/image-2.jpeg" class="gallery-img" alt="computer"></a>
                         <div class="overlay">Here is project 2</div>
                     </div>
                     <div class="gallery-item gallery-item-3">
-                        <a href="##"><img src="./images/image-3.jpeg" class="gallery-img" alt="Image3"></a>
+                        <a href="##"><img src="./images/image-3.jpeg" class="gallery-img" alt="keyboard"></a>
                         <div class="overlay">Here is project 3</div>
                     </div>
                     <div class="gallery-item gallery-item-4">
-                        <a href="##"><img src="./images/image-4.jpeg" class="gallery-img" alt="Image4"></a>
+                        <a href="##"><img src="./images/image-4.jpeg" class="gallery-img" alt="cloud"></a>
                         <div class="overlay">Here is project 4</div>
                     </div>
                 </div>
