added new photo for landing image

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
       </nav>
         <header class="landinginfo"> 
             <div>
-                <img class="EvanPic" src="./images/img_4223.png" alt="Picture of Evan">
+                <img class="EvanPic" src="./images/Evan-image.jpg" alt="Picture of Evan">
             </div>
             <div class="title-container">
                 <h1>EVAN ARBOUR</h1>
