--- a/index.html
+++ b/index.html
@@ -1,99 +1,111 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-      <meta charset="UTF-8">
-      <meta name="viewport" content="width=device-width, initial-scale=1">
-      <title>Evan Arbour</title>
-      <link rel="stylesheet" href="style.css">
-      <link rel="stylesheet" href="reset.css">
-      <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Roboto+Condensed&display=swap">
-      <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Source+Sans+Pro&display=swap">
-      <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Archivo+Black&family=Open+Sans+Condensed:wght@700&family=Source+Sans+Pro&display=swap">
-      <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Open+Sans+Condensed:ital,wght@1,300&family=Source+Sans+Pro&display=swap">
-      
-  </head>
-  <body>
-      <nav>
-          <ul class="nav-bar">
-              <li><a href="#About">About Me</a></li>
-              <li><a href="#Work">Work</a></li>
-              <li><a href="#Contact">Contact</a></li>
-              <li><a href="https://github.com/evanarbour">Github</a></li>
-              <li><a href="https://www.instagram.com/evanarbour/?hl=en">Instagram</a></li>
-          </ul>
-      </nav>
-        <header class="landinginfo"> 
-            <div>
-                <img class="EvanPic" src="./images/Evan-image.jpg" alt="Picture of Evan">
-            </div>
-            <div class="title-container">
-                <h1>EVAN ARBOUR</h1>
-            </div>
-            <section class="nav-container">
-                <div class="nav-text">
-                    <h2>I am a Full-Stack Developer with a background<br>
-                        in performance and exercise science.<br>
-                        I am passionate about collaboration and 
-                        the development of creative solutions.
-                    </h2>
-                </div>
-            </section>
-            <hr>
-        </header>
 
-        <main>
-            <div class="about-container">
-                <div class="about" id="About">
-                    <div>
-                    <h1><span>1</span>  about me</h1>
-                    </div>
-                    <p>Hi! My name is Evan -- I'm a performance and strength coach turned developer. I grew up in<br>
-                    a small town in Maine where all my family still lives! After college, I started my fitness career<br> 
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <title>Evan Arbour</title>
+    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="reset.css">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Roboto+Condensed&display=swap">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Source+Sans+Pro&display=swap">
+    <link rel="stylesheet"
+        href="https://fonts.googleapis.com/css2?family=Archivo+Black&family=Open+Sans+Condensed:wght@700&family=Source+Sans+Pro&display=swap">
+    <link rel="stylesheet"
+        href="https://fonts.googleapis.com/css2?family=Open+Sans+Condensed:ital,wght@1,300&family=Source+Sans+Pro&display=swap">
+
+</head>
+
+<body>
+    <nav>
+        <ul class="nav-bar">
+            <li><a href="#About">About Me</a></li>
+            <li><a href="#Work">Work</a></li>
+            <li><a href="#Contact">Contact</a></li>
+            <li><a href="https://github.com/evanarbour">Github</a></li>
+            <li><a href="https://www.instagram.com/evanarbour/?hl=en">Instagram</a></li>
+        </ul>
+    </nav>
+    <header class="landinginfo">
+        <div>
+            <img class="EvanPic" src="./images/Evan-image.jpg" alt="Picture of Evan">
+        </div>
+        <div class="title-container">
+            <h1>EVAN ARBOUR</h1>
+        </div>
+        <section class="nav-container">
+            <div class="nav-text">
+                <h2>I am a Full-Stack Developer with a background<br>
+                    in performance and exercise science.<br>
+                    I am passionate about collaboration and
+                    the development of creative solutions.
+                </h2>
+            </div>
+        </section>
+        <hr>
+    </header>
+
+    <main>
+        <div class="about-container">
+            <div class="about" id="About">
+                <div>
+                    <h1><span>1</span> about me</h1>
+                </div>
+                <p>Hi! My name is Evan -- I'm a performance and strength coach turned developer. I grew up in<br>
+                    a small town in Maine where all my family still lives! After college, I started my fitness
+                    career<br>
                     in NYC and then moved to Seattle in 2017.
                     <br>
                     <br>
-                    I am completing a certificate program through the University of Washington with skills in CSS, HTML, <br>
-                    JavaScript, and various back-end programs. I am most passionate about the UI/UX design of web applications <br>
-                    - the mixture of creative vision and technical skills.</p>
-                </div> 
+                    I am completing a certificate program through the University of Washington with skills in CSS, HTML,
+                    <br>
+                    JavaScript, and various back-end programs. I am most passionate about the UI/UX design of web
+                    applications <br>
+                    - the mixture of creative vision and technical skills.
+                </p>
             </div>
+        </div>
 
-            <section id="Work" class="work-container">
-                <div>
+        <section id="Work" class="work-container">
+            <div>
                 <h1><span>2</span> work</h1>
-                </div>
+            </div>
             <!-- images that link to applications, that have :hover styling of 
                 color change etc -->
-                <div class="work-grid">
-                    <div class="gallery-item gallery-item-1 ">
-                        <a href="##"><img src="./images/image-1.jpeg" class="gallery-img" alt="A steel wall"></a>
-                        <div class="overlay">Here is project 1</div>
-                    </div>
-                    <div class="gallery-item gallery-item-2">
-                        <a href="##"><img src="./images/image-2.jpeg" class="gallery-img" alt="computer"></a>
-                        <div class="overlay">Here is project 2</div>
-                    </div>
-                    <div class="gallery-item gallery-item-3">
-                        <a href="##"><img src="./images/image-3.jpeg" class="gallery-img" alt="keyboard"></a>
-                        <div class="overlay">Here is project 3</div>
-                    </div>
-                    <div class="gallery-item gallery-item-4">
-                        <a href="##"><img src="./images/image-4.jpeg" class="gallery-img" alt="cloud"></a>
-                        <div class="overlay">Here is project 4</div>
-                    </div>
+            <div class="work-grid">
+                <div class="gallery-item gallery-item-1 ">
+                    <a href="##"><img src="./images/image-1.jpeg" class="gallery-img" alt="A steel wall"></a>
+                    <div class="overlay">Here is project 1</div>
                 </div>
-            </section>
-        </main>
-        
-        <footer id="Contact" class="contact-container">
-            <div>
-            <h1><span>3</span> contact</h1>
+                <div class="gallery-item gallery-item-2">
+                    <a href="https://evanarbour.github.io/password-generator/"><img src="./images/image-2.jpeg"
+                            class="gallery-img" alt="computer"></a>
+                    <div class="overlay">Password Generator <span>(HTML/CSS/JS)</span></div>
+                </div>
+                <div class="gallery-item gallery-item-3">
+                    <a href="https://evanarbour.github.io/day-planner/"><img src="./images/image-3.jpeg"
+                            class="gallery-img" alt="keyboard"></a>
+                    <div class="overlay">Day Planner <span>(HTML/CSS/JS)</span></div>
+                </div>
+                <div class="gallery-item gallery-item-4">
+                    <a href="https://evanarbour.github.io/weather-forecast/"><img src="./images/image-4.jpeg"
+                            class="gallery-img" alt="cloud"></a>
+                    <div class="overlay">Weather Forecast Dashboard <span>(HTML/CSS/JS)</span></div>
+                </div>
             </div>
-             <ul class="footer-nav">
-                <li><a href="mailto:evan.arbour@gmail.com">Email</a></li>
-                <li><a href="https://github.com/evanarbour">Github</a></li>
-                <li><a href="https://www.instagram.com/evanarbour/?hl=en">Instagram</a></li>
-            </ul>
-        </footer>
-    </body>
+        </section>
+    </main>
+
+    <footer id="Contact" class="contact-container">
+        <div>
+            <h1><span>3</span> contact</h1>
+        </div>
+        <ul class="footer-nav">
+            <li><a href="mailto:evan.arbour@gmail.com">Email</a></li>
+            <li><a href="https://github.com/evanarbour">Github</a></li>
+            <li><a href="https://www.instagram.com/evanarbour/?hl=en">Instagram</a></li>
+        </ul>
+    </footer>
+</body>
+
 </html>
