changed links to projects, updated contact info, added resume

--- a/index.html
+++ b/index.html
@@ -23,7 +23,8 @@
             <li><a href="#Work">Work</a></li>
             <li><a href="#Contact">Contact</a></li>
             <li><a href="https://github.com/evanarbour">Github</a></li>
-            <li><a href="https://www.instagram.com/evanarbour/?hl=en">Instagram</a></li>
+            <li><a href="https://www.linkedin.com/in/evan-arbour/">LinkedIn</a></li>
+            <li><a href="./images/Evan_Arbour_CV.pdf" download="Evan-Arbour">Resume (PDF)</a></li>
         </ul>
     </nav>
     <header class="landinginfo">
@@ -31,6 +32,7 @@
             <img class="EvanPic" src="./images/Evan-image.jpg" alt="Picture of Evan">
         </div>
         <div class="title-container">
+            <p>Hello! I'm</p>
             <h1>EVAN ARBOUR</h1>
         </div>
         <section class="nav-container">
@@ -57,7 +59,7 @@
                     in NYC and then moved to Seattle in 2017.
                     <br>
                     <br>
-                    I am completing a certificate program through the University of Washington with skills in CSS, HTML,
+                    I am completing a Full-Stack Web Developer program through the University of Washington with skills in CSS, HTML,
                     <br>
                     JavaScript, and various back-end programs. I am most passionate about the UI/UX design of web
                     applications <br>
@@ -70,27 +72,34 @@
             <div>
                 <h1><span>2</span> work</h1>
             </div>
-            <!-- images that link to applications, that have :hover styling of 
-                color change etc -->
             <div class="work-grid">
                 <div class="gallery-item gallery-item-1 ">
-                    <a href="##"><img src="./images/image-1.jpeg" class="gallery-img" alt="A steel wall"></a>
-                    <div class="overlay">Here is project 1</div>
+                    <img src="./images/city-scan.png" class="gallery-img" alt="screenshot of city-scan homepage">
+                    <div class="overlay">City-Scan<br>
+                        <span><a href=" https://michaelhermes.github.io/City-Scan/">Deployed Application</a></span><br>
+                        <span><a href=" https://github.com/MichaelHermes/City-Scan">Github Repository</a></span>
+                    </div>
                 </div>
                 <div class="gallery-item gallery-item-2">
-                    <a href="https://evanarbour.github.io/password-generator/"><img src="./images/image-2.jpeg"
-                            class="gallery-img" alt="computer"></a>
-                    <div class="overlay">Password Generator <span>(HTML/CSS/JS)</span></div>
+                    <img src="./images/pass-generator.png" class="gallery-img" alt="computer">
+                    <div class="overlay">Password Generator<br>
+                        <span><a href="https://evanarbour.github.io/password-generator/">Deployed Application</a></span><br>
+                        <span><a href="https://github.com/evanarbour/password-generator">Github Repository</a></span>
+                    </div>
                 </div>
                 <div class="gallery-item gallery-item-3">
-                    <a href="https://evanarbour.github.io/day-planner/"><img src="./images/image-3.jpeg"
-                            class="gallery-img" alt="keyboard"></a>
-                    <div class="overlay">Day Planner <span>(HTML/CSS/JS)</span></div>
+                    <img src="./images/day-scheduler.png" class="gallery-img" alt="keyboard">
+                    <div class="overlay">Day Planner<br>
+                        <span><a href="https://evanarbour.github.io/day-planner/">Deployed Application</a></span><br>
+                        <span><a href="https://github.com/evanarbour/day-planner">Github Repository</a></span>
+                    </div>
                 </div>
                 <div class="gallery-item gallery-item-4">
-                    <a href="https://evanarbour.github.io/weather-forecast/"><img src="./images/image-4.jpeg"
-                            class="gallery-img" alt="cloud"></a>
-                    <div class="overlay">Weather Forecast Dashboard <span>(HTML/CSS/JS)</span></div>
+                    <img src="./images/weather.png" class="gallery-img" alt="cloud">
+                    <div class="overlay">Weather Forecast Dashboard<br>
+                        <span><a href="https://evanarbour.github.io/weather-forecast/">Deployed Application</a></span><br>
+                        <span><a href="https://github.com/evanarbour/weather-forecast">Github Repository</a></span>
+                    </div>
                 </div>
             </div>
         </section>
@@ -103,7 +112,7 @@
         <ul class="footer-nav">
             <li><a href="mailto:evan.arbour@gmail.com">Email</a></li>
             <li><a href="https://github.com/evanarbour">Github</a></li>
-            <li><a href="https://www.instagram.com/evanarbour/?hl=en">Instagram</a></li>
+            <li><a href="https://www.linkedin.com/in/evan-arbour/">LinkedIn</a></li>
         </ul>
     </footer>
 </body>
