--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
             <li><a href="#Contact">Contact</a></li>
             <li><a href="https://github.com/evanarbour">Github</a></li>
             <li><a href="https://www.linkedin.com/in/evan-arbour/">LinkedIn</a></li>
-            <li><a href="./images/Evan_Arbour_CV.pdf" download="Evan-Arbour">Resume (PDF)</a></li>
+            <li><a href="./assets/images/EvanArbour_Resume.pdf" download="Evan-Arbour">Resume (PDF)</a></li>
         </ul>
     </nav>
     <header class="landinginfo">
